package kyc.comparateur;

public interface ComparateurDeChaine {
    double comparer(String a, String b);
}
