package kyc.comparateur;

import kyc.model.Nom;

public interface ComparateurDeNom {
    double comparer(Nom a, Nom b);
}
